Fix test (wrong ordering of map entries)